webpack setup + tailwind

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div class="container mx-auto text-center">
+    <p>✨ A lightweight foundation for your next webpack based frontend projectz.</p>
+
+  </div>
 </body>
 </html>
